modified for responsive issue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birth Day Checker</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 
@@ -13,10 +14,10 @@
         <input id="date" type="number" placeholder="DD" name="">
         <input id="month" type="number" placeholder="MM" name="">
         <input id="year" type="number" placeholder="YYYY" name=""> <br>
-        <button type="submit" id="submit-date">Tell me the day!!</button>
-
+        <button type="submit" id="submit-date">Tell me the day,Please!!</button>
+        <p id="message"></p>
     </div>
-    <h2 id="message"></h2>
+    
 
 
 
